Add header text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
  <h1>Hello SHEros</h1>
- <h2>Hello World</h2>   
+ <h2>Hello World</h2>
+ <h3>Hello GitHub</h3>   
 </body>
 </html>
